DeploymentForIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      run: my-app
  replicas: 1
  template:
    metadata:
      labels:
        run: my-app
    spec:
      containers:
        - name: my-app
          image: 154114/vprofileapp  # a tomcat app that runs on port 8080
          ports:
            - containerPort: 8080
