mysqlSecretPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysqlsecret
spec:
  containers:
    - image: mysql:5.7
      name: mysql
      volumeMounts:
        - mountPath: /var/lib/mysql # where the container stores data
          name: mysqlvol
  volumes:
    - name: mysqlvol
      hostPath:
        # directory location on host
        path: /data
        # this field is optional
        type: DirectoryOrCreate # this creates a dir called data if it doesn't exist before
