pods-vpro.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vprofileapp
  label:
    app: frontend
    type: web
spec:
  containers:
    - name: vrofilecontainer
      image: imranvisualpath/freshtomapp:v7
      ports:
       - name: vproapp-port
         containerPort: 8080
      resources:
        requests:    # here, this means the container will only run if the node has atleast 64mb, if the node has less it will be pending
          memory: "64Mi"
          cpu: "250m"
        limits: # here, we indicate this to ensure that the container does not exceed this limit.
          memory: "128Mi"
          cpu: "500m"
