service-vproapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
    - port: 8080
      targetPort: 8090 # port where the container is running, must have been specified in the pods.yaml file-> the containerPort
      nodePort: 30001
      protocol: TCP
  type: NodePort
  selector:
    app: frontend
