service2-vproapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
    - port: 80 # very important as by default load balancer listens on port 80, if you must use another number, ensure to access it from the elb address:the specified port e.g 3000, or access it from the node ip:the targetPort
      targetPort: 8080 # port where the container is running, must have been specified in the pods.yaml file-> the containerPort
      # no need for nodePort, it will be assigned auto
      protocol: TCP # must be in caps
  type: LoadBalancer
  selector:
    app: frontend # must match the label specified in the pod
